@@ -1,5 +1,5 @@
 
-R version 2.5.0 RC (2007-04-23 r41289)
+R version 2.5.0 Patched (2007-05-21 r41653)
 Copyright (C) 2007 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 
@@ -320,4 +320,51 @@ Slot "name":
      [,1]
 [1,]   NA
 > ## fixed in 2.5.0 patched
+> 
+> ## callGeneric inside a method with new arguments {hence using .local()}:
+> setGeneric("Gfun", function(x, ...) standardGeneric("Gfun"),
++ 	   useAsDefault = function(x, ...) sum(x, ...))
+[1] "Gfun"
+> setClass("myMat", contains="matrix")
+[1] "myMat"
+> setClass("mmat2", contains="matrix")
+[1] "mmat2"
+> setMethod(Gfun, signature(x = "myMat"),
++           function(x, extrarg = TRUE) {
++               cat("in 'myMat' method for 'Gfun() : extrarg=", extrarg, "\n")
++               Gfun(unclass(x))
++           })
+[1] "Gfun"
+attr(,"package")
+[1] ".GlobalEnv"
+> setMethod(Gfun, signature(x = "mmat2"),
++           function(x, extrarg = TRUE) {
++               cat("in 'mmat2' method for 'Gfun() : extrarg=", extrarg, "\n")
++               x <- unclass(x)
++               callGeneric()
++           })
+[1] "Gfun"
+attr(,"package")
+[1] ".GlobalEnv"
+> (mm <- new("myMat", diag(3)))
+An object of class "myMat"
+     [,1] [,2] [,3]
+[1,]    1    0    0
+[2,]    0    1    0
+[3,]    0    0    1
+> Gfun(mm)
+in 'myMat' method for 'Gfun() : extrarg= TRUE 
+[1] 3
+> Gfun(mm, extrarg = FALSE)
+in 'myMat' method for 'Gfun() : extrarg= FALSE 
+[1] 3
+> m2 <- new("mmat2", diag(3))
+> Gfun(m2)
+in 'mmat2' method for 'Gfun() : extrarg= TRUE 
+[1] 3
+> Gfun(m2, extrarg = FALSE)
+in 'mmat2' method for 'Gfun() : extrarg= FALSE 
+[1] 3
+> ## The last two gave Error ...... variable ".local" was not found
+> 
 > 
